--- a/styles.scss
+++ b/styles.scss
@@ -88,6 +88,7 @@ h1 {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        border: 2px black solid;
     }
     &__placeKitten {
         height: 400px;
