--- a/styles.scss
+++ b/styles.scss
@@ -1,6 +1,6 @@
 body {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     margin: 0;
     background-image: url(https://images2.alphacoders.com/941/941898.jpg);
     background-size: cover;
@@ -35,19 +35,21 @@ section {
         height: auto;
         max-width: 40px;
         max-height: 40px;
+        &:active {
+            box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+        }
     }
 }
 footer {
     display: flex;
     align-items: flex-end;
-    bottom: 0px;
+    bottom: 10px;
     justify-content: space-between;
     background-color: rgb(66, 66, 255);
 }
 .openedMenu {
     position: absolute;
     bottom: 0px;
-    display: flex;
     margin-top: auto;
     flex-direction: column;
     background-color: rgb(188, 236, 255);
@@ -57,15 +59,21 @@ footer {
 
 ul {
     list-style: none;
-    margin-top: 30px;
+    margin-top: 0cm;
     margin-right: 10px;
-    padding-left: 10px;
+    padding-left: 0px;
+    background-color: white;
+    width: 190px;
+    border: solid black 1px;
 }
 li {
-    padding: 5px 0px 5px 0px;
-    border: solid black 2px;
-    width: 150px;
+    padding: 10px 0px 10px 0px;
+    width: 190px;
     height: 30px;
+    display: flex;
+    &:hover {
+        background-color: rgb(56, 56, 255);
+    }
 }
 h1 {
     font-size: 1.5cm;
@@ -78,23 +86,38 @@ h1 {
         height: 400px;
         width: 400px;
         background-color: white;
-        border: 2px black solid;
+        border: 2px blue solid;
+        flex-wrap: wrap;
+        align-items: flex-start;
     }
     &__internet {
         height: 400px;
         width: 650px;
         background-color: white;
-        display: flex;
         flex-direction: column;
-        justify-content: center;
         align-items: center;
-        border: 2px black solid;
+        border: 2px blue solid;
     }
     &__placeKitten {
         height: 400px;
         width: 500px;
         background-image: url(https://placekitten.com/500/400);
+        border: 2px blue solid;
     }
+}
+
+.appTop {
+    height: 24px;
+    width: 650px;
+    background-color: blue;
+    display: flex;
+    justify-content: space-between;
+    font-size: 20px;
+    color: white;
+    border-bottom: 1px solid black;
+}
+.closeBtn {
+    background-color: red;
 }
 
 figure {
