--- a/styles.scss
+++ b/styles.scss
@@ -43,7 +43,9 @@ section {
 footer {
     display: flex;
     align-items: flex-end;
-    bottom: 10px;
+    width: 100%;
+    position: absolute;
+    bottom: 0px;
     justify-content: space-between;
     background-color: rgb(66, 66, 255);
 }
